# xmasdraw

./: .gitignore  Dockerfile  README.md  README.rst  app.py  drawings.yaml.sample  helpers.py  pyproject.toml  wsgi.py  xmasdraw.py
.github/workflows/: main.yaml
templates/: draw.html  drawn.html
xmasdraw/: app.py  auth.py  helpers.py
xmasdraw/templates/: draw.html  drawn.html
xmasdraw/tests/: names.py  test_helpers.py
