[tool.poetry]
name = "xmasdraw"
version = "0.1.0"
description = ""
authors = ["Nautik <nautik1@n-p.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
PyYAML = "^6.0"
pyuwsgi = "^2.0.21"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
